Fix display on mobile

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   align-items: center;
   background: #dfdfdf;
   display: flex;
-  height: 100vh;
+  height: 80vh;
   justify-content: center;
   text-align: center;
 }
@@ -19,13 +19,14 @@ body {
   border-radius: 40px;
   border: solid #545454 5px;
   display: flex;
-  font-size: 3em;
+  font-size: 40px;
   height: 20%;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  padding: 60px;
+  padding: 10vw;
   position: relative;
+  width: 80vw;
 }
 
 .message {
@@ -33,6 +34,6 @@ body {
   border-radius: 40px;
   border: solid #545454 5px;
   display: inline;
-  padding: 40px;
+  padding: 30px;
   word-wrap: normal;
 }
